fix: Remove align text center in small screens

--- a/css/style.css
+++ b/css/style.css
@@ -99,7 +99,8 @@ body {
 
 @media (max-width: 1200px) {
     .landing .container {
-        flex-direction: column;
+        flex-direction: column-reverse;
+        gap: 60px;
     }
 }
 
@@ -113,8 +114,7 @@ body {
 
 @media (max-width: 1200px) {
     .landing-content {
-        text-align: center;
-        flex-basis: 270px;
+        flex-basis: 0px;
     }
 }
 
@@ -139,12 +139,7 @@ body {
     border: none;
     border-radius: 10px;
     padding: 10px 40px;
-}
-
-@media (max-width: 1200px) {
-    .landing-content button {
-        align-self: center;
-    }
+    cursor: pointer;
 }
 
 .landing img {
